--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fortnite Battle Royale\n",
-    "## Item Store Analysis\n",
+    "# Item Store Analysis\n",
+    "\n",
+    "### Fortnite Battle Royale\n",
     "\n",
     "This study intends to cover the availability and monetization of the items daily on sale for Fortnite Battle Royale."
    ]
