splitting preparation and analysis

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -12,8 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fortnite Battle Royale by Epic Games is one of the most sucessful "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +29,7 @@
        "'/Users/gdbr/Documents/Hyper Island/DA24STO/Modules/12. Individual Project/fortnite-store-analysis'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -54,24 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "df = pd.read_csv(os.getcwd() + \"/csv/\" + \"store.csv\")\n",
-    "\n",
-    "# Convert the date column to datetime; add year, quarter, month, week columns\n",
-    "df['date'] =  pd.to_datetime(df['date'], format='%Y-%m-%d')\n",
-    "df['year'] =  df['date'].map(lambda x:x.year)\n",
-    "df['quarter'] =  df['date'].map(lambda x:x.quarter)\n",
-    "df['month'] =  df['date'].map(lambda x:x.month)\n",
-    "df['week'] =  df['date'].map(lambda x:x.week)"
+    "df = pd.read_csv(os.getcwd() + \"/csv/\" + \"store_updated.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -109,166 +109,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-06-15</td>\n",
-       "      <td>rare</td>\n",
-       "      <td>outfit</td>\n",
-       "      <td>Jellie</td>\n",
-       "      <td>1200</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-06-15</td>\n",
-       "      <td>rare</td>\n",
-       "      <td>outfit</td>\n",
-       "      <td>Scimitar</td>\n",
-       "      <td>1200</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-06-15</td>\n",
-       "      <td>rare</td>\n",
-       "      <td>wrap</td>\n",
-       "      <td>Emblem</td>\n",
-       "      <td>500</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-06-15</td>\n",
-       "      <td>common</td>\n",
-       "      <td>wrap</td>\n",
-       "      <td>Rainbow Bubblegum</td>\n",
-       "      <td>300</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-06-15</td>\n",
-       "      <td>uncommon</td>\n",
-       "      <td>pickaxe</td>\n",
-       "      <td>Fit Stick</td>\n",
-       "      <td>500</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        date    rarity item_type               name  cost  year  quarter   \n",
-       "0 2022-06-15      rare    outfit             Jellie  1200  2022        2  \\\n",
-       "1 2022-06-15      rare    outfit           Scimitar  1200  2022        2   \n",
-       "2 2022-06-15      rare      wrap             Emblem   500  2022        2   \n",
-       "3 2022-06-15    common      wrap  Rainbow Bubblegum   300  2022        2   \n",
-       "4 2022-06-15  uncommon   pickaxe          Fit Stick   500  2022        2   \n",
-       "\n",
-       "   month  week  \n",
-       "0      6    24  \n",
-       "1      6    24  \n",
-       "2      6    24  \n",
-       "3      6    24  \n",
-       "4      6    24  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['rare', 'common', 'uncommon', 'icon_series', 'epic', 'slurp',\n",
-       "       'legendary', 'marvel', 'gaming_legends', 'dc', 'shadow', 'lava',\n",
-       "       'star_wars', 'frozen', 'dark'], dtype=object)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['outfit', 'wrap', 'pickaxe', 'skydive', 'bundle', 'emote',\n",
-       "       'glider', 'spray', 'misc', 'music', 'backpack', 'banner',\n",
-       "       'loading', 'emoji', 'pet', 'toy'], dtype=object)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(df.head())\n",
-    "display(df['rarity'].unique())\n",
-    "display(df['item_type'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Order df by date\n",
-    "df = df.sort_values(by=['date'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>rarity</th>\n",
-       "      <th>item_type</th>\n",
-       "      <th>name</th>\n",
-       "      <th>cost</th>\n",
-       "      <th>year</th>\n",
-       "      <th>quarter</th>\n",
-       "      <th>month</th>\n",
-       "      <th>week</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>28897</th>\n",
        "      <td>2017-10-30</td>\n",
        "      <td>rare</td>\n",
        "      <td>outfit</td>\n",
@@ -280,7 +120,7 @@
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28895</th>\n",
+       "      <th>1</th>\n",
        "      <td>2017-10-30</td>\n",
        "      <td>epic</td>\n",
        "      <td>outfit</td>\n",
@@ -292,7 +132,7 @@
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28900</th>\n",
+       "      <th>2</th>\n",
        "      <td>2017-10-30</td>\n",
        "      <td>uncommon</td>\n",
        "      <td>outfit</td>\n",
@@ -304,7 +144,7 @@
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28899</th>\n",
+       "      <th>3</th>\n",
        "      <td>2017-10-30</td>\n",
        "      <td>uncommon</td>\n",
        "      <td>glider</td>\n",
@@ -316,7 +156,7 @@
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28898</th>\n",
+       "      <th>4</th>\n",
        "      <td>2017-10-30</td>\n",
        "      <td>rare</td>\n",
        "      <td>outfit</td>\n",
@@ -332,19 +172,41 @@
        "</div>"
       ],
       "text/plain": [
-       "            date    rarity item_type                     name  cost  year   \n",
-       "28897 2017-10-30      rare    outfit  First strike Specialist  1200  2017  \\\n",
-       "28895 2017-10-30      epic    outfit            Ghoul Trooper  1500  2017   \n",
-       "28900 2017-10-30  uncommon    outfit                    Scout   800  2017   \n",
-       "28899 2017-10-30  uncommon    glider                  Petunia   500  2017   \n",
-       "28898 2017-10-30      rare    outfit             Recon Expert  1200  2017   \n",
+       "         date    rarity item_type                     name  cost  year   \n",
+       "0  2017-10-30      rare    outfit  First strike Specialist  1200  2017  \\\n",
+       "1  2017-10-30      epic    outfit            Ghoul Trooper  1500  2017   \n",
+       "2  2017-10-30  uncommon    outfit                    Scout   800  2017   \n",
+       "3  2017-10-30  uncommon    glider                  Petunia   500  2017   \n",
+       "4  2017-10-30      rare    outfit             Recon Expert  1200  2017   \n",
        "\n",
-       "       quarter  month  week  \n",
-       "28897        4     10    44  \n",
-       "28895        4     10    44  \n",
-       "28900        4     10    44  \n",
-       "28899        4     10    44  \n",
-       "28898        4     10    44  "
+       "   quarter  month  week  \n",
+       "0        4     10    44  \n",
+       "1        4     10    44  \n",
+       "2        4     10    44  \n",
+       "3        4     10    44  \n",
+       "4        4     10    44  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['rare', 'epic', 'uncommon', 'legendary', 'slurp', 'marvel', 'dark',\n",
+       "       'icon_series', 'frozen', 'shadow', 'gaming_legends', 'dc',\n",
+       "       'star_wars', 'lava', 'common'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['outfit', 'glider', 'pickaxe', 'emote', 'misc', 'backpack',\n",
+       "       'skydive', 'bundle', 'wrap', 'toy', 'pet', 'music', 'banner',\n",
+       "       'loading', 'spray', 'emoji'], dtype=object)"
       ]
      },
      "metadata": {},
@@ -352,17 +214,30 @@
     }
    ],
    "source": [
-    "display(df.head())"
+    "display(df.head())\n",
+    "display(df['rarity'].unique())\n",
+    "display(df['item_type'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3351"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write df to csv file\n",
-    "df.to_csv(os.getcwd() + \"/csv/\" + \"store_updated.csv\", index=False)"
+    "# Number of unique items — assuming names act like unique id\n",
+    "len(df[\"name\"].unique())"
    ]
   }
  ],
