--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### Fortnite Battle Royale\n",
     "\n",
-    "Fortnite Battle Royale by Epic Games is one of the most sucessful games in the battle royale genre. Released in 2017, it has been a huge success, with over 350 million players worldwide. The game is free to play, but it has a monetization system based on the sale of cosmetic items, such as skins, emotes, pickaxes, gliders, etc. These items are sold in the Item Store, which is updated daily with new items. The items are sold for V-Bucks, the in-game currency, which can be bought with real money."
+    "Fortnite Battle Royale by Epic Games is one of the most sucessful games in the battle royale genre. Released in 2017, it has been a huge success, with over 350 million players worldwide. The game is free to play, but it has a monetization system based on the sale of cosmetic items, such as skins, emotes, pickaxes, gliders, etc. These items are sold in the Item Shop, which is updated daily with new items. The items are sold for V-Bucks, the in-game currency, which can be bought with real money."
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "### What\n",
     "\n",
-    "An analysis of the Fortnite Battle Royale items store from the perspective of economic game design.\n",
+    "An analysis of the Fortnite Battle Royale item shop from the perspective of economic game design.\n",
     "\n",
     "This study intends to cover the availability and monetization of the items daily on sale for Fortnite Battle Royale.\n",
     "\n",
@@ -1190,7 +1190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
