--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -57,6 +57,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Hypothesis\n",
+    "\n",
+    "The item shop started smaller, with new items and less variety, and grew over time to reach profitability."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Libraries and settings"
    ]
   },
@@ -1603,6 +1612,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of new daily items doesn't follow the store growth. Actually, it decreases slightly after 2020."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -1716,23 +1732,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2b0e62290>"
+       "<seaborn.axisgrid.FacetGrid at 0x2af37a0d0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a9f56bfa511403cbb38946440ddee09",
+       "model_id": "525e4fb9452b47af9c478f9a371cc8d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1760,7 +1776,6 @@
     "df_grouped= df.loc[(df[\"first\"]==True) & (df[\"year\"] < 2019)].groupby([\"year\",\"month\",\"item_type\"], as_index=False).agg(dt_max=(\"date\",\"min\"), count=(\"one\",\"sum\"))\n",
     "# df_grouped[\"y_m\"] = pandas.concat(df_grouped[\"year\"],df_grouped[\"month\"])\n",
     "df_grouped[\"y_m\"] = df_grouped[\"year\"].astype(str) + df_grouped[\"month\"].astype(str)\n",
-    "\n",
     "\n",
     "sns.catplot(df_grouped, kind=\"box\", y=\"item_type\", x=\"count\")"
    ]
@@ -1812,7 +1827,6 @@
     "# df_grouped[\"y_m\"] = pandas.concat(df_grouped[\"year\"],df_grouped[\"month\"])\n",
     "df_grouped[\"y_m\"] = df_grouped[\"year\"].astype(str) + df_grouped[\"month\"].astype(str)\n",
     "\n",
-    "\n",
     "sns.catplot(df_grouped, kind=\"box\", y=\"item_type\", x=\"count\")"
    ]
   },
@@ -1863,8 +1877,14 @@
     "# df_grouped[\"y_m\"] = pandas.concat(df_grouped[\"year\"],df_grouped[\"month\"])\n",
     "df_grouped[\"y_m\"] = df_grouped[\"year\"].astype(str) + df_grouped[\"month\"].astype(str)\n",
     "\n",
-    "\n",
     "sns.catplot(df_grouped, kind=\"box\", y=\"item_type\", x=\"count\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, in 2021 the number of new bundles started to catch up."
    ]
   },
   {
@@ -1914,8 +1934,16 @@
     "# df_grouped[\"y_m\"] = pandas.concat(df_grouped[\"year\"],df_grouped[\"month\"])\n",
     "df_grouped[\"y_m\"] = df_grouped[\"year\"].astype(str) + df_grouped[\"month\"].astype(str)\n",
     "\n",
-    "\n",
     "sns.catplot(df_grouped, kind=\"box\", y=\"item_type\", x=\"count\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From 2022 onwards, bundles are the most produced item type.\n",
+    "\n",
+    "That's important, because bundles are more expensive than outfits while they also can reintroduce old items."
    ]
   },
   {
@@ -1965,7 +1993,6 @@
     "# df_grouped[\"y_m\"] = pandas.concat(df_grouped[\"year\"],df_grouped[\"month\"])\n",
     "df_grouped[\"y_m\"] = df_grouped[\"year\"].astype(str) + df_grouped[\"month\"].astype(str)\n",
     "\n",
-    "\n",
     "sns.catplot(df_grouped, kind=\"box\", y=\"item_type\", x=\"count\")"
    ]
   },
@@ -1975,7 +2002,7 @@
    "source": [
     "### 4.3 Pacing\n",
     "\n",
-    "For each year, the store's daily number of items increases.\n",
+    "For each year, the store's daily number of items increases. But since the number of new items doesn't follow the same trend, reintroducing old items is in fact the way to keep up with the store growth.\n",
     "\n",
     "- Shows distributions of daily number of items displayed for each year."
    ]
@@ -2213,6 +2240,15 @@
     "                # multiple=\"stack\",\n",
     "                  # kde=True\n",
     "                  )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Conclusion\n",
+    "\n",
+    "Not only the store has grown over time, but also the number of items displayed per day. This is explained not only by the increase in the number of old items, but also by the increase in the number of bundles, witch push the daily store spending depth up. All of that without puting too much pressure on the production team."
    ]
   },
   {
